force-app/main/default/objects/Contact/fields/Actual_lifetime__c.field-meta.xml
<CustomField>
    <fullName>Actual_lifetime__c</fullName>
    <label>Lifetime Actual Win</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>