force-app/main/default/objects/Contact/fields/Actual_rolling_365__c.field-meta.xml
<CustomField>
    <fullName>Actual_rolling_365__c</fullName>
    <label>Rolling 365 Actual Win</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>