force-app/main/default/objects/Contact/fields/Are_they_full_time_part_time_or_casual__c.field-meta.xml
<CustomField>
    <fullName>Are_they_full_time_part_time_or_casual__c</fullName>
    <description>Contains the work timing for Individuals</description>
    <label>Are they full time, part time or casual?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>Casual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>