force-app/main/default/objects/Contact/fields/Australian_Business_Number_ABN__c.field-meta.xml
<CustomField>
    <fullName>Australian_Business_Number_ABN__c</fullName>
    <description>Use to Australian Business Number (ABN) for business</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Australian Business Number (ABN)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>