force-app/main/default/objects/Contact/fields/Birthday_Today__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Today__c</fullName>
    <formula>DATE(
YEAR(Today()),
MONTH( Date_of_Birth__c ),
DAY( Date_of_Birth__c )   
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DOB (Sort)</label>
    <type>Date</type>
</CustomField>