force-app/main/default/objects/Contact/fields/Bulk_Update_for_Data_Fix__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Update_for_Data_Fix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bulk Update for Data Fix</label>
    <type>Checkbox</type>
</CustomField>