force-app/main/default/objects/Contact/fields/Business_card__c.field-meta.xml
<CustomField>
    <fullName>Business_card__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>