force-app/main/default/objects/Contact/fields/Business_Location__c.field-meta.xml
<CustomField>
    <fullName>Business_Location__c</fullName>
    <description>Used to store Business Location</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>