force-app/main/default/objects/Contact/fields/Call_List__c.field-meta.xml
<CustomField>
    <fullName>Call_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call List</label>
    <referenceTo>Call_Lists__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>