force-app/main/default/objects/Contact/fields/Card_Status__c.field-meta.xml
<CustomField>
    <fullName>Card_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Card Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>