force-app/main/default/objects/Contact/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Card Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>