force-app/main/default/objects/Contact/fields/Card_Type_with_Status__c.field-meta.xml
<CustomField>
    <fullName>Card_Type_with_Status__c</fullName>
    <formula>IF(
NOT(ISBLANK(Card_Status__c)), 	Card_Type__c + &quot; &quot; + &quot;(&quot; + UPPER(Card_Status__c) + &quot;)&quot;, 	Card_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Card Type Status</label>
    <type>Text</type>
</CustomField>