force-app/main/default/objects/Contact/fields/Cash_Turnover_Rolling_365__c.field-meta.xml
<CustomField>
    <fullName>Cash_Turnover_Rolling_365__c</fullName>
    <label>Rolling 365 Cash Turnover</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>