force-app/main/default/objects/Contact/fields/CD_CP_total__c.field-meta.xml
<CustomField>
    <fullName>CD_CP_total__c</fullName>
    <label>CD/CP</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>