force-app/main/default/objects/Contact/fields/Centrelink_Concession_Card_Holder__c.field-meta.xml
<CustomField>
    <fullName>Centrelink_Concession_Card_Holder__c</fullName>
    <inlineHelpText>Seniors and Student cards are not Centrelink Concession Cards; this includes the following cards ONLY: Health Care Card; Commonwealth Seniors Health Card; Ex-carer Allowance (child) Health Care Card; Foster Child Health Care Card; Low-income Health Care Card; Pensioner Concession Card</inlineHelpText>
    <label>Centrelink Concession Card Holder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>