force-app/main/default/objects/Contact/fields/ContactPhoto__c.field-meta.xml
<CustomField>
    <fullName>ContactPhoto__c</fullName>
    <description>Patron Photograph</description>
    <formula>IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos; + PhotoId__c, &apos;Patron Photo&apos;,100,100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Patron Photograph</inlineHelpText>
    <label>ContactPhoto</label>
    <type>Text</type>
</CustomField>