force-app/main/default/objects/Contact/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Country Code</label>
    <type>Phone</type>
</CustomField>