force-app/main/default/objects/Contact/fields/Country_of_Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Citizenship__c</fullName>
    <inlineHelpText>Country of Citizenship’: “Country that you are a citizen of either by birth or obtained through ‘Naturalisation’</inlineHelpText>
    <label>Country of Citizenship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>