force-app/main/default/objects/Contact/fields/CountTotalDaysinQLD__c.field-meta.xml
<CustomField>
    <fullName>CountTotalDaysinQLD__c</fullName>
    <label>CountTotalDaysinQLD OLD</label>
    <summarizedField>Residency_Checklist_temp__c.Duration__c</summarizedField>
    <summaryFilterItems>
        <field>Residency_Checklist_temp__c.Entry_State__c</field>
        <operation>equals</operation>
        <value>QLD</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Residency_Checklist_temp__c.Duration__c</field>
        <operation>lessOrEqual</operation>
        <value>365</value>
    </summaryFilterItems>
    <summaryForeignKey>Residency_Checklist_temp__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>