force-app/main/default/objects/Contact/fields/Direct_Mail_Consent__c.field-meta.xml
<CustomField>
    <fullName>Direct_Mail_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Mail Consent</label>
    <type>Checkbox</type>
</CustomField>