force-app/main/default/objects/Contact/fields/Do_Not_Post_Residential_Address__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Post_Residential_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Post Residential Address</label>
    <type>Checkbox</type>
</CustomField>