force-app/main/default/objects/Contact/fields/DOB_Trigger__c.field-meta.xml
<CustomField>
    <fullName>DOB_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trigger for Process builder</description>
    <label>DOB Trigger</label>
    <type>Checkbox</type>
</CustomField>