force-app/main/default/objects/Contact/fields/Documents_that_prove_their_business__c.field-meta.xml
<CustomField>
    <fullName>Documents_that_prove_their_business__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Documents that prove their business?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>