force-app/main/default/objects/Contact/fields/DoNotCallHome__c.field-meta.xml
<CustomField>
    <fullName>DoNotCallHome__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Call Home</label>
    <type>Checkbox</type>
</CustomField>