force-app/main/default/objects/Contact/fields/DoNotCallMobile__c.field-meta.xml
<CustomField>
    <fullName>DoNotCallMobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Call Mobile</label>
    <type>Checkbox</type>
</CustomField>