force-app/main/default/objects/Contact/fields/DoNotCallWork__c.field-meta.xml
<CustomField>
    <fullName>DoNotCallWork__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Call Work</label>
    <type>Checkbox</type>
</CustomField>