force-app/main/default/objects/Contact/fields/DoNotEmailWork__c.field-meta.xml
<CustomField>
    <fullName>DoNotEmailWork__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Email Work</label>
    <type>Checkbox</type>
</CustomField>