force-app/main/default/objects/Contact/fields/Exl_ExclusionsCountLast35Days__c.field-meta.xml
<CustomField>
    <fullName>Exl_ExclusionsCountLast35Days__c</fullName>
    <label>Exclusions Count Last 35 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>