force-app/main/default/objects/Contact/fields/Facebook_Messenger_ID__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Messenger_ID__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Facebook Messenger ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>