force-app/main/default/objects/Contact/fields/Frequent_flyer_number__c.field-meta.xml
<CustomField>
    <fullName>Frequent_flyer_number__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Frequent flyer number</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>