force-app/main/default/objects/Contact/fields/Home_Email__c.field-meta.xml
<CustomField>
    <fullName>Home_Email__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Home Email</label>
    <type>Email</type>
</CustomField>