force-app/main/default/objects/Contact/fields/Home_Property__c.field-meta.xml
<CustomField>
    <fullName>Home_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>