force-app/main/default/objects/Contact/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <formula>IF( OR (Host_Sydney__c=$User.Id,
Host_GC__c=$User.Id,
Host_Brisbane__c=$User.Id,
Host_International__c=$User.Id),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host</label>
    <type>Checkbox</type>
</CustomField>