force-app/main/default/objects/Contact/fields/Host_Brisbane__c.field-meta.xml
<CustomField>
    <fullName>Host_Brisbane__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host - Brisbane</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>