force-app/main/default/objects/Contact/fields/Host_GC__c.field-meta.xml
<CustomField>
    <fullName>Host_GC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host - GC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>