force-app/main/default/objects/Contact/fields/Host_Location__c.field-meta.xml
<CustomField>
    <fullName>Host_Location__c</fullName>
    <formula>TEXT( $User.Host_Location__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Location</label>
    <type>Text</type>
</CustomField>