force-app/main/default/objects/Contact/fields/Host_Sydney__c.field-meta.xml
<CustomField>
    <fullName>Host_Sydney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host - Sydney</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>