force-app/main/default/objects/Contact/fields/How_long_have_they_worked__c.field-meta.xml
<CustomField>
    <fullName>How_long_have_they_worked__c</fullName>
    <description>Use to store duration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>How long have they worked for business?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>