force-app/main/default/objects/Contact/fields/If_Gov_Law_Enforcement_Dept_Location__c.field-meta.xml
<CustomField>
    <fullName>If_Gov_Law_Enforcement_Dept_Location__c</fullName>
    <description>If in Government or Law Enforcement, which department or body do they work for and where is it located?</description>
    <encryptionScheme>None</encryptionScheme>
    <label>If Gov/Law Enforcement? Dept &amp; Location?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>