force-app/main/default/objects/Contact/fields/Instagram_ID__c.field-meta.xml
<CustomField>
    <fullName>Instagram_ID__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Instagram ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>