force-app/main/default/objects/Contact/fields/IsRestricted__c.field-meta.xml
<CustomField>
    <fullName>IsRestricted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRestricted</label>
    <type>Checkbox</type>
</CustomField>