force-app/main/default/objects/Contact/fields/Junket_Group_Level_Name__c.field-meta.xml
<CustomField>
    <fullName>Junket_Group_Level_Name__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Junket Group Level Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>