force-app/main/default/objects/Contact/fields/Junket_Operator__c.field-meta.xml
<CustomField>
    <fullName>Junket_Operator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Junket Operator</label>
    <type>Checkbox</type>
</CustomField>