force-app/main/default/objects/Contact/fields/Junket_Rep__c.field-meta.xml
<CustomField>
    <fullName>Junket_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Junket Rep</label>
    <type>Checkbox</type>
</CustomField>