force-app/main/default/objects/Contact/fields/Junket_Rep_Licence__c.field-meta.xml
<CustomField>
    <fullName>Junket_Rep_Licence__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Junket Rep Licence</label>
    <length>80</length>
    <type>Text</type>
</CustomField>