force-app/main/default/objects/Contact/fields/Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Line_ID__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Line ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>