force-app/main/default/objects/Contact/fields/Local_obj_Age__c.field-meta.xml
<CustomField>
    <fullName>Local_obj_Age__c</fullName>
    <formula>Salesforce_Local_lookup__r.Age_New__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local obj Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>