force-app/main/default/objects/Contact/fields/Loyalty_Program__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Program__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Loyalty Program</label>
    <length>80</length>
    <type>Text</type>
</CustomField>