force-app/main/default/objects/Contact/fields/Market_Region__c.field-meta.xml
<CustomField>
    <fullName>Market_Region__c</fullName>
    <label>Market Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indochina</fullName>
            </value>
            <value>
                <fullName>IRB - North Asia</fullName>
            </value>
            <value>
                <fullName>IRB - Other</fullName>
            </value>
            <value>
                <fullName>IRB - South Asia</fullName>
            </value>
            <value>
                <fullName>Regional - NSW</fullName>
            </value>
            <value>
                <fullName>Regional - QLD</fullName>
            </value>
            <value>
                <fullName>North Asia</fullName>
                <isActive>false</isActive>
                <label>North Asia</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>South Asia</fullName>
                <isActive>false</isActive>
                <label>South Asia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>