force-app/main/default/objects/Contact/fields/Name_of_business_or_company__c.field-meta.xml
<CustomField>
    <fullName>Name_of_business_or_company__c</fullName>
    <description>Contain the name of a business or company</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of business or company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>