force-app/main/default/objects/Contact/fields/NSW_Warning_Flag__c.field-meta.xml
<CustomField>
    <fullName>NSW_Warning_Flag__c</fullName>
    <formula>IF(  ISPICKVAL(Residency_Type__c , &apos;Domestic&apos;) ,
IF(Total_NSW_Days__c&gt; 150,
(TEXT( Total_NSW_Days__c ) &amp; &apos;   &apos; &amp; IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red Flag&quot;)),
(TEXT( Total_NSW_Days__c ))),
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total days spent in NSW last 12 months</label>
    <type>Text</type>
</CustomField>