force-app/main/default/objects/Contact/fields/Number_of_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Preferences__c</fullName>
    <label>Number of Preferences</label>
    <summaryForeignKey>Preferences__c.Patron__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>